--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "nodemon index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"lint": "eslint ."
 	},
 	"keywords": [],
 	"author": "",
@@ -16,5 +17,10 @@
 		"mongodb": "^6.4.0",
 		"mongoose": "^8.2.1",
 		"nodemon": "^3.1.0"
+	},
+	"devDependencies": {
+		"eslint": "^8.57.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-plugin-import": "^2.29.1"
 	}
 }
