--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
 		"indent": ["error", "tab"],
 		"max-len": 0,
 		"no-console": 0,
-		"object-curly-newline": 0
+		"object-curly-newline": 0,
+		"no-underscore-dangle": 0
 	}
 }
