--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.18.3",
+		"firebase-admin": "^12.0.0",
 		"mongodb": "^6.4.0",
 		"mongoose": "^8.2.1",
-		"nodemon": "^3.1.0"
+		"nodemon": "^3.1.0",
+		"swagger-ui-express": "^5.0.0"
 	},
 	"devDependencies": {
 		"eslint": "^8.57.0",
