--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.18.3",
+		"firebase": "^10.11.0",
 		"firebase-admin": "^12.0.0",
 		"mongodb": "^6.4.0",
 		"mongoose": "^8.2.1",
